# otus-end-to-end-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: end_to_end_pipelines.ipynb  serialization.ipynb
