[tool.poetry]
name = "otus-end-to-end-pipeline"
version = "0.1.0"
description = ""
authors = ["NickOsipov <nick.osipov.91@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "6.29.5"
scikit-learn = "1.5.2"
pandas = "2.2.3"
matplotlib = "3.9.3"
seaborn = "0.13.2"
xgboost = "2.1.3"
skl2onnx = "1.17.0"
onnxruntime = "1.20.1"
sklearn2pmml = "0.111.2"
tabulate = "0.9.0"
pypmml = "1.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
